# evoli

./: CLAUDE.md  Cargo.toml  LICENSE.md  README.md
.github/workflows/: ci.yml
docs/: BEVY_MIGRATION_SHARED_TYPES.md  UPGRADE_PLAN.md
resources/: wind.ron
resources/prefabs/: factions.ron
resources/prefabs/creatures/: carnivore.ron  ground.ron  herbivore.ron  herbivore_carcass.ron  ixie.ron  nushi.ron  plant.ron  topplegrass.ron
src/: main.rs  render_graph.rs
src/components/: collider.rs  combat.rs  creatures.rs  digestion.rs  mod.rs  swarm.rs
src/components/experimental/: perception.rs
src/resources/: audio.rs  debug.rs  mod.rs  prefabs.rs  world_bounds.rs
src/resources/experimental/: spatial_grid.rs  wind.rs
src/states/: loading.rs  main_game.rs  menu.rs  mod.rs  pause_menu.rs
src/systems/: camera_movement.rs  collision.rs  combat.rs  death.rs  debug.rs  digestion.rs  health.rs  main_game_ui.rs  mod.rs  movement.rs  spawner.rs  swarm_behavior.rs  time_control.rs
src/systems/behaviors/: decision.rs  obstacle.rs  ricochet.rs  wander.rs
src/systems/experimental/: gravity.rs  out_of_bounds.rs  perception.rs  topplegrass.rs  wind_control.rs
src/utils/: hierarchy_util.rs
