[package]
name = "evolution-island"
version = "0.2.0"
authors = []
edition = "2018"

[dependencies]
rand = "0.7.3"
log = "0.4"
smart-default = "0.7"
serde = "1.0"
thread_profiler = "0.3.0"

# TODO: find a way to update the features based on which platform is targeted
# MacOS needs the metal feature while other platforms use vulkan.
[dependencies.amethyst]
version = "0.15.3"
features = ["metal", "gltf"]

[features]
profiler = [
    "thread_profiler/thread_profiler",
    "amethyst/profiler"
]


